Actualizacion del Binding, creacion del Dashboard para listar productos

--- a/app/src/main/res/layout-sw320dp-small-land/register_main.xml
+++ b/app/src/main/res/layout-sw320dp-small-land/register_main.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/layout_bg"
-            app:srcCompat="@drawable/ic_logo_playzone" />
+            app:srcCompat="@drawable/ic_logo_playzone_letras" />
 
     </LinearLayout>
 
@@ -70,11 +70,12 @@
                 android:layout_marginRight="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etUserName"
+                    android:id="@+id/etUserEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="FullName" />
+                    android:hint="FullName"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -116,7 +117,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Shop Name" />
+                    android:hint="Shop Name"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
@@ -136,11 +138,12 @@
                 android:layout_marginRight="30dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etEmail"
+                    android:id="@+id/etUserPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="Email" />
+                    android:hint="Email"
+                    tools:ignore="TouchTargetSizeCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -155,7 +158,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_edittext"
-                    android:hint="City" />
+                    android:hint="City"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
